[package]
name = "pusha"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = "1.35.0"
aws-sdk-s3 = "1.38.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
new_mime_guess = "4.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
snafu = "0.8.3"
tokio = { version = "1", features = ["full"] }
